# Central_Park_Squirrel_Analysis

./: README.md  index.html  main.py  pyproject.toml  queries.sql
README/: index.html
data:/: organized_data.csv  squirrel_data.db
notebooks/: handle_missing_values.ipynb
visuals/: central_park_map.html  data_for_js.json  data_for_js_extended.json  js_age_pie.html  js_dashboard.html  js_fur_color_bar.html  js_location_stats.html  js_shift_stacked_bar.html
