[project]
name = "squirrel-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]
